examples/errors/undeclared_id.alan
main(): proc
{
    x = 42;
}